[ADD] utils for InstanceTracker and remove item reparenting to prevent details button flicker

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -82,6 +82,7 @@ body {
     box-shadow: none; /* supprime l'effet de brillance blanche */
     position: relative;
     background-clip: padding-box;
+    order: 0;
 }
 
     .data-item::before {
